--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ a.navbar-brand {
 }
 
 .upper_part {
-	background-image: url(./assets/Home/banner_1.png);
+	background-image: url(./assets/desk_back.jpg);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
