--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.app {
+	font-family: campton !important;
+}
+
 h2,
 p {
 	color: white;
@@ -8,7 +12,6 @@ p {
 
 a.navbar-brand {
 	color: #fff;
-	font-family: 'Exotc350 Bd BT';
 	font-size: 32.5px;
 	font-weight: bold;
 	letter-spacing: 0;
@@ -18,6 +21,7 @@ a.navbar-brand {
 
 .who_we_are {
 	background-image: url('./assets/yellow_hover.png');
+	background-repeat: no-repeat;
 }
 
 .navbar-brand {
@@ -175,20 +179,17 @@ a.navbar-brand {
 	border-radius: 8px;
 	letter-spacing: 1px;
 	font-size: 16px;
-	font-family: 'Campton Book' !important;
 	height: 65px;
 }
 
 .Contact_sec form textarea {
 	padding: 20px;
-	font-family: 'Campton Book' !important;
 }
 
 .Contact_sec form .btn {
 	border: 1px solid #dcdcdc;
 	width: 100%;
 	font-size: 24px;
-	font-family: Campton;
 	padding: 15px 0px;
 	border-radius: 8px;
 	margin-bottom: 100px !important;
