--- a/src/Homeext.css
+++ b/src/Homeext.css
@@ -5,6 +5,18 @@
 	color: black !important;
 }
 
+.popup {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 280px;
+	z-index: 100;
+	background-color: #ededf1;
+	border-radius: 8px;
+	padding: 30px;
+}
+
 .client_section div {
 	padding: 30px;
 }
