--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 	font-family: campton !important;
 }
 
+.bold_me {
+	font-family: campton_bold !important;
+}
+
 h2,
 p {
 	color: white;
@@ -32,6 +36,7 @@ a.navbar-brand {
 	font-size: 1.25rem;
 	line-height: inherit;
 	white-space: nowrap;
+	font-family: 'exotic';
 }
 #contact_abc label {
 	font-weight: bold !important;
