--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@ a.navbar-brand {
 	background-image: url('./assets/yellow_hover.png');
 	background-repeat: no-repeat;
 }
-
+.navbar-brand:hover {
+	color: white;
+}
 .navbar-brand {
 	display: inline-block;
 	padding-top: 0.3125rem;
