--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,15 @@ p {
 	color: #f47824 !important;
 }
 
+.para3 img {
+	height: 55px;
+	width: 55px;
+}
+#section_2a img {
+	height: 90px;
+	width: 90px;
+}
+
 a.navbar-brand {
 	color: #fff;
 	font-size: 32.5px;
@@ -232,7 +241,7 @@ a.navbar-brand {
 		background-image: url(./assets/mob_back.png);
 	}
 	a.navbar-brand {
-		font-size: 18px;
+		font-size: 21px;
 	}
 	.mob_head_2 {
 		font-size: 20px;
